--- a/MyStore/Views/_ViewImports.cshtml
+++ b/MyStore/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@*позволит применять типы из пространства имен MyStore в представлениях, не ссылаясь на это пространство имен.*@
 @using MyStore 
-@namespace MyStore.Models
+@using MyStore.Models.ViewModels
 @*включает встроенные вспомогательные функции дескрипторов (для создания элементов HTML)*@
 @addTagHelper *, Micrtosoft.AspNetCore.Mvc.TagHelpers 
+@addTagHelper MyStore.Infrastructure.*, MyStore
